--- a/package.json
+++ b/package.json
@@ -7,27 +7,29 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
     "@metamask/detect-provider": "^1.2.0",
-    "@reduxjs/toolkit": "^1.8.1",
+    "@reduxjs/toolkit": "^1.8.2",
     "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.2.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.0",
-    "@types/node": "^16.11.34",
-    "@types/react": "^18.0.9",
-    "@types/react-dom": "^18.0.3",
+    "@testing-library/react": "^13.3.0",
+    "@testing-library/user-event": "^14.2.0",
+    "@types/axios": "^0.14.0",
+    "@types/jest": "^27.5.1",
+    "@types/node": "^17.0.38",
+    "@types/react": "^18.0.10",
+    "@types/react-dom": "^18.0.5",
     "@types/react-router-dom": "^5.3.3",
-    "antd": "^4.20.4",
-    "chart.js": "^3.7.1",
+    "antd": "^4.20.7",
+    "axios": "^0.27.2",
+    "chart.js": "^3.8.0",
     "react": "^18.1.0",
     "react-chartjs-2": "^4.1.0",
     "react-dom": "^18.1.0",
-    "react-redux": "^8.0.1",
+    "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
-    "sass": "^1.51.0",
+    "sass": "^1.52.1",
     "styled-components": "^5.3.5",
-    "typescript": "^4.6.4",
+    "typescript": "^4.7.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
