--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "antd": "^4.20.7",
     "axios": "^0.27.2",
     "chart.js": "^3.8.0",
+    "hardhat": "^2.9.7",
     "react": "^18.1.0",
     "react-chartjs-2": "^4.1.0",
     "react-dom": "^18.1.0",
